new repo structure

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,22 @@
-# Contains all libraries that are needed for this project
+# Core Libraries
+numpy
+pandas
+
+# Visualization
+matplotlib
+seaborn
+plotly
+
+# Machine Learning
+scikit-learn
+xgboost
+lightgbm
+
+# Experiment Tracking
+mlflow
+
+# Deployment
+streamlit
+
+# Utilities
+python-dotenv
